deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gene-to-reactions-production
spec:
  selector:
    matchLabels:
      app: gene-to-reactions
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: gene-to-reactions
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/gene-to-reactions:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /prometheus-client
          name: prometheus-client
        command: ["gunicorn", "-c", "gunicorn.py", "gene_to_reactions.app:app"]
        resources:
          limits:
            cpu: "1000m"
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "1000m"
      volumes:
      - name: prometheus-client
        emptyDir: {}
