deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gene-to-reactions
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /gene-to-reactions
        backend:
          serviceName: gene-to-reactions-production
          servicePort: 80
